Fix z-index of dropdown menu

--- a/app/assets/stylesheets/styles/components/_nav.scss
+++ b/app/assets/stylesheets/styles/components/_nav.scss
@@ -42,7 +42,7 @@
   // http://thesassway.com/intermediate/referencing-parent-selectors-using-ampersand
   .home-nav & {
     position: absolute;
-    z-index: 1;
+    z-index: 11;
     left: 0;
     top: 0;
     right: 0;
